# raresync

./: CMakeLists.txt  README.md  main.cpp
conf/: raresync.conf
example/: gen_conf.cpp  run_instance  run_instance.cpp  run_with_core.cpp
include/: conf.h  core.h  crypto.h  crypto.hpp  define.h  log.h  network.h  proto.h  quad.h  synchronizer.h
include/http/server/: connection_manager.hpp  reply.hpp  request.hpp  server.hpp
script/: run_instances.sh  run_with_cores.sh
src/: core.cpp  network.cpp  network_peer.cpp  network_server.cpp  synchronizer.cpp
